Sidebar icons and alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4 {
     font-family: roboto-bold;
 }
 
+h1 {
+    font-size: 24px;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -29,6 +33,7 @@ h1, h2, h3, h4 {
     background-color: #1b91d4;
     color: white;
     grid-row: 1 / 3;
+    padding: 15px;
 }
 
 .sidebar a {
@@ -37,8 +42,21 @@ h1, h2, h3, h4 {
     font-family: roboto-bold;
 }
 
-img {
+.dashboard, .sidebar-navigation div {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    justify-content: start;
+}
+
+.dashboard .dashboard-icon {
     width: 2rem;
+}
+
+.dashboard-icon {
+    width: 1rem;
+    margin: 10px;
+    filter: invert(1) brightness(2);
 }
 
 .sidebar-navigation {
